--- a/checkout.html
+++ b/checkout.html
@@ -7,6 +7,9 @@
   <title>Finalizar compra - WALOX</title>
   <link rel="stylesheet" href="style.css">
 
+  <!-- Favicon -->
+  <link rel="icon" type="icons" href="icons/favicon-32x32-WALOX.png">
+
   <!-- FontAwesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
@@ -95,14 +98,14 @@
 
     <!-- Datos de envío -->
     <form id="checkoutForm" method="POST" class="checkout-form">
-      <label>Nombre completo</label>
-      <input type="text" name="nombre" required>
+      <label for="nombre">Nombre completo</label>
+      <input type="text" name="nombre" id="nombre" required>
 
-      <label>Teléfono</label>
-      <input type="tel" name="telefono" required>
+      <label for="telefono">Teléfono</label>
+      <input type="tel" name="telefono" id="telefono" required>
 
-      <label>Dirección de entrega</label>
-      <textarea name="direccion" required></textarea>
+      <label for="direccion">Dirección de entrega</label>
+      <textarea name="direccion" id="direccion" required></textarea>
 
       <h3>Método de pago</h3>
 
@@ -120,6 +123,7 @@
         <button id="boton-pagar" type="button" class="btn">Pagar con tarjeta</button>
       </div>
 
+      <!-- Botón único de confirmación -->
       <button type="submit" class="btn">✅ Confirmar pedido</button>
     </form>
   </section>
@@ -164,7 +168,7 @@
     }
 
     function removeItem(index) {
-      if(confirm("¿Deseas eliminar este producto del carrito?")) {
+      if (confirm("¿Deseas eliminar este producto del carrito?")) {
         cartItems.splice(index, 1);
         localStorage.setItem("cartItems", JSON.stringify(cartItems));
         renderCart();
@@ -175,35 +179,37 @@
   </script>
 
   <script>
-    // URL de tu Apps Script
-    const scriptURL = "https://script.google.com/macros/s/AKfycbxeNbbzxMoPtojQtDst9ZHfk2GLBVHxMSMSptALvrBz_dm99uM2PUKGKzOT_xEA2x2L/exec";
+    // === Envío del pedido a Google Sheets ===
+    const scriptURL = "https://script.google.com/macros/s/AKfycbzDo2kRDdoZHPkAg_0zU5dRP0DS8CnIPogqSVXJIZ5ylbsB7dsAaH030B7cEJQ3goEl/exec";
     const form = document.getElementById("checkoutForm");
 
     form.addEventListener("submit", (e) => {
       e.preventDefault();
 
+      if (cartItems.length === 0) {
+        alert("⚠️ Tu carrito está vacío.");
+        return;
+      }
+
       const formData = new FormData(form);
-      formData.append("carrito", JSON.stringify(cartItems)); 
+      formData.append("carrito", JSON.stringify(cartItems));
 
       fetch(scriptURL, { method: "POST", body: formData })
-        .then((response) => {
-          if (response.ok) {
-            alert("✅ Pedido enviado correctamente. Gracias por tu compra.");
-            localStorage.removeItem("cartItems"); 
-            window.location.href = "gracias.html";
-          } else {
-            alert("❌ Hubo un problema al enviar tu pedido.");
-          }
+        .then(() => {
+          alert("✅ Pedido enviado correctamente. ¡Gracias por tu compra!");
+          localStorage.removeItem("cartItems");
+          window.location.href = "gracias.html";
         })
         .catch((error) => {
           console.error("Error:", error);
-          alert("⚠️ Error de conexión. Inténtalo de nuevo.");
+          alert("❌ Hubo un problema al enviar tu pedido.");
         });
     });
   </script>
 
   <script>
-    Culqi.publicKey = 'pk_test_tu_clave_publica_aqui'; 
+    // === Pago con tarjeta usando Culqi ===
+    Culqi.publicKey = 'pk_test_tu_clave_publica_aqui';
     document.getElementById('boton-pagar').addEventListener('click', function() {
       Culqi.options({
         title: 'WALOX Store',
