--- a/producto1.html
+++ b/producto1.html
@@ -5,80 +5,140 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Producto - WALOX Store</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <style>
+    /* --- DETALLE DEL PRODUCTO (3 columnas: imagen - info - oferta) --- */
+    .producto-detalle {
+      display: grid;
+      grid-template-columns: 350px 1fr 250px;
+      gap: 30px;
+      max-width: 1000px;
+      margin: 40px auto;
+      align-items: flex-start;
+    }
+
+    .producto-imagen img {
+      max-width: 100%;
+      border-radius: 10px;
+    }
+
+    .producto-info h1 {
+      font-size: 2rem;
+      margin-bottom: 10px;
+    }
+
+    .precio {
+      font-size: 1.5rem;
+      color: #e60000;
+      font-weight: bold;
+      margin: 10px 0;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 10px 20px;
+      background: #ff4e50;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .btn:hover {
+      background: #e60000;
+    }
+
+    /* --- OFERTA RELÁMPAGO --- */
+    .flash-offer {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+      background: linear-gradient(90deg, #ff4e50, #f9d423);
+      color: #fff;
+      padding: 15px;
+      border-radius: 10px;
+      animation: pulse 1.5s infinite;
+    }
+
+    .flash-offer h2 {
+      margin: 0;
+      font-size: 1.3rem;
+    }
+
+    .flash-offer p {
+      margin: 5px 0 10px;
+      font-size: 0.9rem;
+    }
+
+    .flash-timer {
+      background: rgba(0, 0, 0, 0.3);
+      padding: 8px 15px;
+      border-radius: 8px;
+      font-size: 1.2rem;
+      font-weight: bold;
+      letter-spacing: 2px;
+    }
+
+    @keyframes pulse {
+      0% { box-shadow: 0 0 10px #ff0000; }
+      50% { box-shadow: 0 0 25px #ff9900; }
+      100% { box-shadow: 0 0 10px #ff0000; }
+    }
+
+    /* --- Responsive para móviles --- */
+    @media (max-width: 768px) {
+      .producto-detalle {
+        grid-template-columns: 1fr;
+      }
+
+      .flash-offer {
+        margin-top: 20px;
+      }
+    }
+  </style>
 </head>
 <body>
   <!-- Header -->
   <header class="header">
-  <a href="index.html" class="logo">
-    <img src="icons/Walox-logo.png" alt="WALOX Logo">
-  </a>
-  
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <a href="index.html" class="logo">
+      <img src="icons/Walox-logo.png" alt="WALOX Logo">
+    </a>
 
-  <nav class="nav">
-    <a href="#"><i class="fas fa-thumbs-up"></i> Artículos más vendidos</a>
-    <a href="#">Inicio</a>
-    <a href="#">Productos</a>
-    <a href="#">Ofertas</a>
-    <a href="#">Contacto</a>
-  </nav>
+    <nav class="nav">
+      <a href="#"><i class="fas fa-thumbs-up"></i> Artículos más vendidos</a>
+      <a href="#">Inicio</a>
+      <a href="#">Productos</a>
+      <a href="#">Ofertas</a>
+      <a href="#">Contacto</a>
+    </nav>
 
-  <!-- Buscador -->
- <div class="search-box">
-  <input type="text" placeholder="Buscar productos...">
-  <button class="search-btn">
-    <!-- Icono lupa -->
-    <svg xmlns="http://www.w3.org/2000/svg" 
-         fill="none" viewBox="0 0 24 24" 
-         stroke="currentColor" width="20" height="20">
-      <path stroke-linecap="round" 
-            stroke-linejoin="round" 
-            stroke-width="2" 
-            d="M21 21l-4.35-4.35m0 0A7.5 7.5 0 104.5 4.5a7.5 7.5 0 0012.15 12.15z" />
-    </svg>
-  </button>
-</div>
+    <!-- Buscador -->
+    <div class="search-box">
+      <input type="text" placeholder="Buscar productos...">
+      <button class="search-btn">
+        <i class="fas fa-search"></i>
+      </button>
+    </div>
 
-<div class="icons">
-  <!-- Ayuda -->
-  <a href="#" class="help" aria-label="Ayuda">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-      <path d="M12 2C6.5 2 2 6.5 2 12s4.5 10 
-      10 10 10-4.5 10-10S17.5 2 12 
-      2zm0 18c-4.4 0-8-3.6-8-8s3.6-8 
-      8-8 8 3.6 8 8-3.6 8-8 
-      8zm-1-5h2v2h-2v-2zm2.1-7.8c-.9-.6-2.1-.8-3.1-.4-.7.3-1.4.9-1.6 
-      1.7-.2.6.3 1.2.9 1.2.4 
-      0 .8-.3.9-.6.1-.3.3-.5.6-.6.3-.1.7-.1.9.1.3.2.4.5.4.9 
-      0 .6-.5 1-1 1h-1c-.6 0-1 
-      .5-1 1v2h2v-1c1.1 0 2-.9 
-      2-2 0-.7-.3-1.3-.9-1.7z"/>
-    </svg>
-  </a>
-
-  <!-- Carrito -->
-  <a href="#" class="cart" aria-label="Carrito">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-      <path d="M7 18c-1.1 0-1.99.9-1.99 
-      2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 
-      0c-1.1 0-1.99.9-1.99 
-      2S15.9 22 17 22s2-.9 2-2-.9-2-2-2zM7.2 
-      14l.8-2h9c.7 0 1.4-.4 1.7-1l3.6-6.5A1 
-      1 0 0 0 21.5 3H5.2L4.3 1H1v2h2l3.6 
-      7.6-1.3 2.4C4.5 14.4 5.5 
-      16 7 16h12v-2H7.4c-.1 
-      0-.3-.1-.3-.3v-.1z"/>
-    </svg>
-  </a>
-</div>
-
-</header>
+    <div class="icons">
+      <!-- Ayuda -->
+      <a href="#" class="help" aria-label="Ayuda"><i class="fas fa-circle-question"></i></a>
+      <!-- Carrito -->
+      <a href="#" class="cart" aria-label="Carrito"><i class="fas fa-shopping-cart"></i></a>
+    </div>
+  </header>
 
   <!-- Detalles del producto -->
   <section class="producto-detalle">
+    <!-- Imagen -->
     <div class="producto-imagen">
       <img src="img/Alfombra Grande.jpeg" alt="Alfombra para sala">
     </div>
+
+    <!-- Info -->
     <div class="producto-info">
       <h1>Alfombra Grande para Sala</h1>
       <p class="precio">$119.00</p>
@@ -89,11 +149,44 @@
       </p>
       <button class="btn">Agregar al carrito 🛒</button>
     </div>
+
+    <!-- Oferta Relámpago -->
+    <div class="flash-offer">
+      <h2>🔥 OFERTA RELÁMPAGO 🔥</h2>
+      <p>¡Aprovecha antes de que termine!</p>
+      <div class="flash-timer" id="countdown">00:00:00</div>
+    </div>
   </section>
 
   <!-- Footer -->
   <footer class="footer">
     <p>© 2025 WALOX Store | Todos los derechos reservados</p>
   </footer>
+
+  <script>
+    // Oferta: 2 horas desde ahora
+    let countDownDate = new Date().getTime() + (2 * 60 * 60 * 1000);
+
+    let x = setInterval(function() {
+      let now = new Date().getTime();
+      let distance = countDownDate - now;
+
+      let hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      let minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+      let seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+      document.getElementById("countdown").innerHTML =
+        (hours < 10 ? "0" + hours : hours) + ":" +
+        (minutes < 10 ? "0" + minutes : minutes) + ":" +
+        (seconds < 10 ? "0" + seconds : seconds);
+
+      // Cuando termine
+      if (distance < 0) {
+        clearInterval(x);
+        document.getElementById("countdown").innerHTML = "¡Finalizó!";
+        document.querySelector(".flash-offer").style.background = "#333";
+      }
+    }, 1000);
+  </script>
 </body>
 </html>
