--- a/producto1.html
+++ b/producto1.html
@@ -5,8 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Producto - WALOX Store</title>
   <link rel="stylesheet" href="style.css">
+
+  <!-- Favicon -->
+  <link rel="icon" type="icons" href="icons/favicon-32x32-WALOX.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
+
+    
+
     /* --- DETALLE DEL PRODUCTO (3 columnas: imagen - info - oferta) --- */
     .producto-detalle {
       display: grid;
@@ -141,18 +147,18 @@
     <!-- Info -->
     <div class="producto-info">
       <h1>Alfombra Grande para Sala</h1>
-      <p class="precio">$119.00</p>
+      <p class="precio">S/ 119.00</p>
       <p class="descripcion">
         Dale estilo y comodidad a tu sala con nuestra alfombra premium. 
         Material resistente, suave al tacto y fácil de limpiar. 
         Disponible en varios colores y tamaños.
       </p>
-      <button class="btn">Agregar al carrito 🛒</button>
+      <button class="btn">Agregar al carrito</button>
     </div>
 
     <!-- Oferta Relámpago -->
     <div class="flash-offer">
-      <h2>🔥 OFERTA RELÁMPAGO 🔥</h2>
+      <h2> OFERTA RELÁMPAGO </h2>
       <p>¡Aprovecha antes de que termine!</p>
       <div class="flash-timer" id="countdown">00:00:00</div>
     </div>
